# bets_mensal

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: netrefer.ipynb
scripts/: build_union.py  common.py  currency.py  gsheets.py  scp_cellxpert.py  scp_income_access.py  scp_netrefer.py  scp_raventrack.py  seed_env_passwords.py
tests/: conftest.py  test_build_union.py  test_build_union_transform.py  test_common.py  test_gsheets.py
