[project]
name = "bets-mensal"
version = "0.1.0"
description = "Extração mensal dos ganhos de operadores Netrefer (Monthly Earnings Report)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
